# ab_bayes_test

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: 0.1_proportion_conjugate_low_prob.py  0.2_proportion_mcmc.py  0.3_proportion_compare.py  0_proportion_conjugate.py  1.1_mean_mcmc.py  1.3_mean_compare.py  1_mean_conjugate.py
tests/: test_ab_bayestest.py
